fix: for compatibility with graalvm/java9+ illegal reflection error (because quarkus fails to add --add-opens)